# RunningCoach

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  architect.md  docker-compose.yml  railway.json
backend/: .env.example  .env.production.template  AGENTS.md  Dockerfile  README.md  alembic.ini  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_gear_tables.py  003_add_garmin_session_data.py  004_fix_table_names_and_add_missing.py  005_fix_users_columns.py  006_add_activity_laps.py  007_extend_activity_models.py  008_add_hr_record_date_unique.py  008_add_user_max_hr.py  009_add_activity_pr_indexes.py  010_add_strength_training.py  011_add_activity_raw_event_id.py  012_add_resting_hr_to_users.py  012_fix_garmin_schema_drift.py  013_add_stryd_metrics_to_activities.py  014_add_strava_upload_jobs.py  015_fix_workout_schedule_schema.py  018_fit_files_to_db.py  019_add_clerk_user_id.py  08eb26d42ac1_add_ai_training_snapshots.py  092d615b9f22_add_calendar_notes_table.py  1bf7bd02ff0f_add_sensor_info_fields_to_activity.py  3dbea9002f20_add_unique_constraint_to_health_metrics.py  7fccb0ac2198_add_races_table.py  (+4 more)
backend/app/: __init__.py  config.py  main.py  observability.py
backend/docs/: CLOUD_DEPLOYMENT.md  FIT_DB_STORAGE.md  R2_ARCHITECTURE.md  R2_FREE_TIER.md  debug-patterns.md
backend/scripts/: __init__.py  build_knowledge_index.py  check_r2_migration.py  check_schema.py  cleanup_fit_files.py  migrate_fit_files_to_db.py  migrate_fits_to_r2.py  migrate_to_neon.py  migrate_users_to_clerk.py  reparse_fit_files.py  reparse_fit_laps.py  reparse_fit_power.py  reparse_fit_sensors.py  run_cloud_tests.sh  seed_user.py  test_cloud_services_live.py  verify_cloud_migration.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_cloud_services.py  test_dashboard.py  test_gear.py  test_ingest.py  test_strava.py  test_workouts.py
docs/: AGENTS.md  (+14 more)
(+560 files in other folders)
